// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components > Alert should renders a default alert correctly 1`] = `
<div
  className="alert alert--default"
>
  Alerta Padrão
</div>
`;

exports[`components > Alert should renders a warning alert correctly 1`] = `
<div
  className="alert alert--warning"
>
  Alerta de Aviso
</div>
`;
